--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
         <br> 
         <formulario>
         
-            <form action="wellcome_get.php" method="get">
+            <form>
                 <label>Para comprar entradas rellena los siguientes datos</label><br><br>
-                Nombre: <input  type="text" name="nombre" placeholder="tu nombre"><br>
-                Apellidos: <input type="text" name="apellidos" placeholder="tus apellidos"><br>
+                Nombre: <input type="text" name="nombre" placeholder=" tu nombre"><br>
+                Apellidos: <input type="text" name="apellidos" placeholder=" tus apellidos"><br>
                 Edad: <input type="number" name="edad" min="16" max="64" placeholder="16"><br>
-                Menor: <input type="radio" name="menor" value="si">Si<input type="radio" name="menor" value="no">No<br>
+                Menor: <input  class="botones" type="radio" name="menor" value="si">Si<input type="radio" name="menor" value="no">No<br>
                 Tipo de entrada: <select name="entrada">
                     <option>Butaca Normal</option>
                     <option>Butaca VIP</option>
                 </select>
 
-
-                <br><input type="submit" value="Comprar">
+                <br>
+                <br><input  class="boton" type="submit" value="Comprar">
             </form>
+
         </formulario>
     </div>
 </body>
