--- a/index.html
+++ b/index.html
@@ -18,14 +18,36 @@
         
             <form>
                 <label>Para comprar entradas rellena los siguientes datos</label><br><br>
-                Nombre: <input type="text" name="nombre" placeholder=" tu nombre"><br>
-                Apellidos: <input type="text" name="apellidos" placeholder=" tus apellidos"><br>
-                Edad: <input type="number" name="edad" min="16" max="64" placeholder="16"><br>
-                Menor: <input  class="botones" type="radio" name="menor" value="si">Si<input type="radio" name="menor" value="no">No<br>
-                Tipo de entrada: <select name="entrada">
+                Nombre: <input type="text" name="nombre" placeholder=" tu nombre" required><br>
+                Apellidos: <input type="text" name="apellidos" placeholder=" tus apellidos" required><br>
+                Edad: <input type="number" name="edad" min="16" max="64" placeholder="16" required><br>
+                Menor: <input  class="botones" type="radio" name="menor" value="si">Si<input type="radio" name="menor" value="no" required>No<br>
+                Tipo de entrada: <select name="entrada" required>
+                    <option value="">Elige una opción</option>
                     <option>Butaca Normal</option>
                     <option>Butaca VIP</option>
-                </select>
+                </select><br>
+                Fecha: <input class="fecha" type="date" required><br>
+                Hora: <input class="hora" type="time" list="listatime" required><br>
+                <datalist id="listatime" size="5">
+                    <option value="13:00">
+                    <option value="13:30">
+                    <option value="14:00">
+                    <option value="14:30">
+                    <option value="15:00">
+                    <option value="15:30">
+                    <option value="16:00">
+                    <option value="16:30">    
+                    <option value="17:00">    
+                    <option value="17:30">
+                    <option value="18:00">    
+                    <option value="18:30">
+                    <option value="19:00">    
+                    <option value="19:30">
+                    <option value="20:00">    
+                    <option value="20:30">
+                    <option value="21:00">
+                    </datalist>
 
                 <br>
                 <br><input  class="boton" type="submit" value="Comprar">
